// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiRangeLevels is rendered 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2 emotion-euiRangeLevels-euiTestCss"
  data-test-subj="test subject string"
>
  <svg
    aria-hidden="true"
    class="euiRangeLevel customClass emotion-euiRangeLevel-danger"
    data-test-subj="firstLevel"
    role="img"
    style="inset-inline-start: calc(0% + 0px); inset-inline-end: calc(80.8% - 9.5625px); inline-size: calc(19.200000000000003% + 9.5625px);"
  />
  <svg
    aria-hidden="true"
    class="euiRangeLevel emotion-euiRangeLevel-success"
    role="img"
    style="inset-inline-start: calc(19.200000000000003% + 9.5625px); inset-inline-end: calc(0% - 0px); inline-size: calc(80.8% + -9.5625px);"
  />
</div>
`;

exports[`EuiRangeLevels is rendered with named and custom color 1`] = `
<div
  class="euiRangeLevels emotion-euiRangeLevels"
>
  <svg
    aria-hidden="true"
    class="euiRangeLevel emotion-euiRangeLevel-danger"
    role="img"
    style="inset-inline-start: calc(0% + 0px); inset-inline-end: calc(80.8% - 9.5625px); inline-size: calc(19.200000000000003% + 9.5625px);"
  />
  <svg
    aria-hidden="true"
    class="euiRangeLevel emotion-euiRangeLevel-customColor"
    role="img"
    style="inset-inline-start: calc(19.200000000000003% + 9.5625px); inset-inline-end: calc(0% - 0px); inline-size: calc(80.8% + -9.5625px); background-color: rgb(255, 0, 0);"
  />
</div>
`;

exports[`EuiRangeLevels thrown errors should throw error if \`level.max\` is higher than \`max\` 1`] = `"The level max of 200 is higher than the max value of 100."`;

exports[`EuiRangeLevels thrown errors should throw error if \`level.min\` is lower than \`min\` 1`] = `"The level min of -10 is lower than the min value of 0."`;
